tests/baselines/reference/typeParametersShouldNotBeEqual.errors.txt
==== tests/cases/compiler/typeParametersShouldNotBeEqual.ts (2 errors) ====
    function ff<T, U>(x: T, y: U) {
        var z: Object;
        x = x;  // Ok
        x = y;  // Error
        ~
!!! typeParametersShouldNotBeEqual.ts(4,5): error TS2011: Type 'U' is not assignable to type 'T'.
        x = z;  // Error
        ~
!!! typeParametersShouldNotBeEqual.ts(5,5): error TS2011: Type 'Object' is not assignable to type 'T'.
        z = x;  // Ok
    }
    